--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.1.7",
     "expo": "^51.0.14",
     "expo-constants": "~16.0.1",
